[package]
name = "kraken2_rs"
version = "0.6.12"
edition = "2021"
authors = ["jianshuzhao@yahoo.com"]
description = "An ultra-fast, low-memory footprint and accurate taxonomy classifier for all"
license = "MIT"
repository = "https://github.com/jianshu93/kraken2-rust"
keywords = ["bioinformatics", "metagenomics", "microbiome", "classification"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kraken2_rs"
path = "src/bin/kraken2.rs"

[features]
double_hashing = []
exact_counting = []

[dependencies]
seqkmer = { version = "0.1.0", path = "../seqkmer" }
clap = { version = "4.4.10", features = ["derive"] }
hyperloglogplus = { version = "0.4.1", features = ["const-loop"] }
seahash = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4"
walkdir = "2"
rayon = "1.8"
libc = "0.2"
regex = "1.5.4"
flate2 = "1.0"
dashmap = { version = "6.0.1", features = ["rayon"] }
num_cpus = "1.13.1"

[dev-dependencies]
criterion = "0.5.1"
twox-hash = "1.6.3"
farmhash = {version = "1.1.5"}
